@@ -1,6 +1,6 @@
 ;;; mime-w3m.el --- mime-view content filter for text
 
-;; Copyright (C) 2001 TSUCHIYA Masatoshi <tsuchiya@namazu.org>
+;; Copyright (C) 2001, 2002 TSUCHIYA Masatoshi <tsuchiya@namazu.org>
 
 ;; Author: TSUCHIYA Masatoshi <tsuchiya@namazu.org>,
 ;;         Akihiro Arisawa    <ari@mbf.sphere.ne.jp>
@@ -68,6 +68,54 @@
 	  (body-presentation-method . mime-w3m-preview-text/html)))
        (set-alist 'mime-view-type-subtype-score-alist '(text . html) 3))))
 
+(defvar mime-w3m-mode-command-alist
+  '((backward-char)
+    (describe-mode)
+    (forward-char)
+    (goto-line)
+    (next-line)
+    (previous-line)
+    (w3m-antenna)
+    (w3m-antenna-add-current-url)
+    (w3m-bookmark-add-current-url)
+    (w3m-bookmark-add-this-url)
+    (w3m-bookmark-view)
+    (w3m-close-window)
+    (w3m-copy-buffer)
+    (w3m-delete-buffer)
+    (w3m-dtree)
+    (w3m-edit-current-url)
+    (w3m-edit-this-url)
+    (w3m-gohome)
+    (w3m-goto-url)
+    (w3m-goto-url-new-session)
+    (w3m-history)
+    (w3m-history-restore-position)
+    (w3m-history-store-position)
+    (w3m-mouse-view-this-url . mime-w3m-mouse-view-this-url)
+    (w3m-namazu)
+    (w3m-next-buffer)
+    (w3m-previous-buffer)
+    (w3m-quit)
+    (w3m-redisplay-with-charset)
+    (w3m-reload-this-page)
+    (w3m-scroll-down-or-previous-url)
+    (w3m-scroll-up-or-next-url)
+    (w3m-search)
+    (w3m-select-buffer)
+    (w3m-switch-buffer)
+    (w3m-view-header)
+    (w3m-view-parent-page)
+    (w3m-view-previous-page)
+    (w3m-view-source)
+    (w3m-view-this-url . mime-w3m-view-this-url)
+    (w3m-weather))
+  "Alist of commands to use for emacs-w3m in the MIME-View buffer.  Each
+element looks like (FROM-COMMAND . TO-COMMAND); FROM-COMMAND should be
+registered in `w3m-mode-map' which will be substituted by TO-COMMAND
+in `mime-w3m-mode-map'.  If TO-COMMAND is nil, a MIME-View command key
+will not be substituted.")
+
 (defsubst mime-w3m-setup ()
   "Setup `mime-w3m' module."
   (require 'w3m)
@@ -77,19 +125,15 @@
     (push (cons 'mime-view-mode 'mime-w3m-cid-retrieve)
 	  w3m-cid-retrieve-function-alist))
   (unless mime-w3m-mode-map
-    (let ((map (copy-keymap w3m-mode-map)))
-      (substitute-key-definition 'w3m-view-this-url
-				 'mime-w3m-view-this-url map)
-      (substitute-key-definition 'w3m-mouse-view-this-url
-				 'mime-w3m-view-this-url map)
-      (substitute-key-definition 'w3m-quit 'mime-preview-quit map)
-      (substitute-key-definition 'w3m-close-window 'mime-preview-quit map)
-      (substitute-key-definition 'w3m-view-previous-page nil map)
-      (substitute-key-definition 'w3m-reload-this-page nil map)
-      (substitute-key-definition 'w3m-view-source nil map)
-      (substitute-key-definition 'w3m-view-header nil map)
-      (substitute-key-definition 'w3m-history nil map)
-      (setq mime-w3m-mode-map map))))
+    (setq mime-w3m-mode-map (copy-keymap w3m-mode-map))
+    (dolist (def mime-w3m-mode-command-alist)
+      (condition-case nil
+	  (substitute-key-definition (car def) (cdr def) mime-w3m-mode-map)
+	(error)))
+    ;; override widget.
+    (if (featurep 'xemacs)
+	(define-key mime-w3m-mode-map [(button2-down)] 'ignore)
+      (define-key mime-w3m-mode-map [down-mouse-2] 'ignore))))
 
 (def-edebug-spec mime-w3m-save-background-color t)
 (defmacro mime-w3m-save-background-color (&rest body)
@@ -100,9 +144,6 @@
 	   (font-set-face-background 'default color (current-buffer))
 	   ))
     (cons 'progn body)))
-
-(defmacro mime-w3m-keymap-property ()
-  (if (featurep 'xemacs) '(quote keymap) '(quote local-map)))
 
 ;;;###autoload
 (defun mime-w3m-preview-text/html (entity situation)
@@ -127,11 +168,15 @@
 			 (point-max)
 			 (and (stringp xref)
 			      (string-match "\\`http://" xref)
-			      xref)))
-	 (error (message (format "%s" err))))
-       (put-text-property p (point-max)
-			  (mime-w3m-keymap-property)
-			  mime-w3m-mode-map)))))
+			      xref))
+	     (add-text-properties p (point-max)
+				  (list (if (or (featurep 'xemacs)
+						(>= emacs-major-version 21))
+					    'keymap
+					  'local-map)
+					mime-w3m-mode-map
+					'text-rendered-by-mime-w3m t)))
+	 (error (message (format "%s" err))))))))
 
 ;; To avoid byte-compile warning in `mime-w3m-cid-retrieve'.
 (autoload 'mime-uri-parse-cid "mime-parse")
@@ -162,14 +207,15 @@
   (mime-w3m-view-this-url))
 
 (let (current-load-list)
-  (defadvice kill-new (after mime-w3m-remove-text-properties activate compile)
-    "Advised by Emacs-W3M.
-Protect `kill-ring-save' against the `local-map' text property."
-    (and (eq this-command 'kill-ring-save)
-	 (eq major-mode 'mime-view-mode)
-	 (put-text-property 0 (length (car kill-ring))
-			    (mime-w3m-keymap-property) nil
-			    (car kill-ring)))))
+  (defadvice kill-new (before strip-keymap-properties-from-kill
+			      (string &optional replace) activate)
+    "Advised by emacs-w3m.
+Strip `keymap' or `local-map' properties from a killed string."
+    (if (text-property-any 0 (length string)
+			   'text-rendered-by-mime-w3m t string)
+	(remove-text-properties 0 (length string)
+				'(keymap nil local-map nil)
+				string))))
 
 (mime-w3m-insinuate)
 
