@@ -1,3 +1,14 @@
+2002-01-31  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* mime-w3m.el (mime-w3m-mode-command-alist): New variable.
+	(mime-w3m-setup): Use it; invalidate widget button in
+	`mime-w3m-mode-map'.
+	(mime-w3m-keymap-property): Removed.
+	(mime-w3m-preview-text/html): Add `text-rendered-by-mime-w3m' text
+	property to the rendered area.
+	(kill-new): Strip keymap properties from a killed string only if
+	it has `text-rendered-by-mime-w3m' property.
+
 2002-01-31  Hideyuki SHIRAI  <shirai@meadowy.org>
 
 	* w3m.el (w3m-url-at-point): Remove all text-properties from url.
